--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 </head>
 
 <body>
+    <header class="header">
+        <img src="/content/img/omnifood-logo.png" alt="omnifood-logo" class="logo">
+        <nav class="main--nav">
+            <ul class="main--nav--list">
+                <li><a class="main--nav--link" href="#">Section 1</a></li>
+                <li><a class="main--nav--link" href="#">Section 2</a></li>
+                <li><a class="main--nav--link" href="#">Section 3</a></li>
+                <li><a class="main--nav--link" href="#">Section 4</a></li>
+                <li><a class="main--nav--link nav-cta" href="#">Section 5</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
     <section class="section-hero">
         <div class="hero">
         <div class="hero-text-box">
@@ -40,8 +54,7 @@
         alt="A woman enjoying food, meals in container, food bowls on a table">
         </div>
         </div>
-
     </section>
-    
+</main>   
 </body>
 </html>
