--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header">
-        <img src="/content/img/omnifood-logo.png" alt="omnifood-logo" class="logo">
+        <img src="content/img/omnifood-logo.png" alt="omnifood-logo" class="logo">
         <nav class="main--nav">
             <ul class="main--nav--list">
                 <li><a class="main--nav--link" href="#">Section 1</a></li>
@@ -37,12 +37,12 @@
             <a href="#" class="btn btn--outline">Learn more &darr;</a>
             <div class="delivered-meals">
                 <div class="delivered-imgs">
-                    <img src="/content/img/customers/customer-1.jpg" alt="Customer photo">
-                    <img src="/content/img/customers/customer-2.jpg" alt="Customer photo">
-                    <img src="/content/img/customers/customer-3.jpg" alt="Customer photo">
-                    <img src="/content/img/customers/customer-4.jpg" alt="Customer photo">
-                    <img src="/content/img/customers/customer-5.jpg" alt="Customer photo">
-                    <img src="/content/img/customers/customer-6.jpg" alt="Customer photo">
+                    <img src="content/img/customers/customer-1.jpg" alt="Customer photo">
+                    <img src="content/img/customers/customer-2.jpg" alt="Customer photo">
+                    <img src="content/img/customers/customer-3.jpg" alt="Customer photo">
+                    <img src="content/img/customers/customer-4.jpg" alt="Customer photo">
+                    <img src="content/img/customers/customer-5.jpg" alt="Customer photo">
+                    <img src="content/img/customers/customer-6.jpg" alt="Customer photo">
                 </div>
                 <p class="delivered-text">
                    <span>250,000+</span>  meals delivered last year!
@@ -50,11 +50,13 @@
             </div>
         </div>
         <div class="hero-img-box">
-            <img src="/content/img/hero.png" class="hero-img"
+            <img src="content/img/hero.png" class="hero-img"
         alt="A woman enjoying food, meals in container, food bowls on a table">
         </div>
         </div>
     </section>
+
+   
 </main>   
 </body>
 </html>
