--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="style.css">
     <title>Omnifood</title>
 </head>
@@ -56,6 +57,49 @@
         </div>
     </section>
 
+    <section class="section--how">
+        <div class="container">
+            <span class="subheading">How it works</span>
+            <h2 class="heading--secondary">
+                Your daily dose of health in 3 simple steps
+            </h2>
+        </div>
+        <div class="container grid grid--2-cols grid--center-v">
+            <!-- step 01 -->
+            <div class="steps-text-box">
+                <span class="step-number">01</span>
+                <h3 class="heading-tertiary">Tell us what you like (and what not)</h3>
+                <p class="steps-details">
+                    Never again waste time thinking about what to eat! Omnifood AI will create a 100% personalized weekly meal plan just for you. It makes sure you get all the nutrients and vitamins you need, no matter what diet you follow!
+                </p>
+            </div>
+            <div class="steps-img-box">
+                <img class="step-img" src="content/img/app/app-screen-1.png" alt="iphone app preferences screenshot">
+            </div>
+            <!-- step 02 -->
+            <div class="steps-img-box">
+                <img class="step-img" src="content/img/app/app-screen-2.png" alt="iphone app meal approve screenshot">
+            </div>
+            <div class="steps-text-box">
+                <span class="step-number">02</span>
+                <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
+                <p class="steps-details">
+                    Once per week, approve the meal plan generated for you by Omnifood AI. You can change ingredients, swap entire meals, or even add your own recipes.
+                </p>
+            </div>
+            <!-- step 03 -->
+            <div class="steps-text-box">
+                <span class="step-number">03</span>
+                <h3 class="heading-tertiary">Receive meals at convenient time</h3>
+                <p class="steps-details">
+                    Best chefs in town will cook your selected meal every day, and we will deliver it to your door whenever works best for you. You can change delivery schedule and address daily!
+                </p>
+            </div>
+            <div class="steps-img-box">
+                <img class="step-img" src="content/img/app/app-screen-3.png" alt="iphone app food delivery screenshot">
+            </div>
+        </div>
+    </section>
    
 </main>   
 </body>
