finish testimonial section

--- a/index.html
+++ b/index.html
@@ -178,6 +178,78 @@
             <a href="#" class="link">See all recipes &rarr;</a>
         </div>
     </section>
+
+    <section class="section--testmonial">
+        <div class="testmonial-left">
+        <span class="subheading">testimonials</span>
+        <h2 class="heading--secondary">
+            Once you try it, you can't go back!
+        </h2>
+    
+        <div class="testmonial-box">
+            
+            <!-- Tradition to use figure and blockquotes -->
+            <figure class="testmonial">
+                <img src="content/img/customers/dave.jpg" alt="customer Dave photo" class="testmonial-img">
+                <blockquote class="testmonial-text">Inexpensive, healthy and great-tasting meals, without even having to order manually! It feels truly magical.</blockquote>
+                <span class="testmonial-name">&mdash; Dave Bryson</span>
+            </figure>
+            <figure class="testmonial">
+                <img src="content/img/customers/ben.jpg" alt="customer Ben Hadley photo" class="testmonial-img">
+                <blockquote class="testmonial-text">The AI algorithm is crazy good, it chooses the right meals for me every time. It's amazing not to worry about food anymore!</blockquote>
+                <span class="testmonial-name">&mdash; Ben Hadley</span>
+            </figure>
+            <figure class="testmonial">
+                <img src="content/img/customers/steve.jpg" alt="customer Steve Miller photo" class="testmonial-img">
+                <blockquote class="testmonial-text">Omnifood is a life saver! I just started a company, so there's no time for cooking. I couldn't live without my daily meals now!</blockquote>
+                <span class="testmonial-name">&mdash; Steve Miller</span>
+            </figure>
+            <figure class="testmonial">
+                <img src="content/img/customers/hannah.jpg" alt="customer Hannah Smith photo" class="testmonial-img">
+                <blockquote class="testmonial-text">I got Omnifood for the whole family, and it frees up so much time! Plus, everything is organic and vegan and without plastic.</blockquote>
+                <span class="testmonial-name">&mdash; Hannah Smith</span>
+            </figure>
+        </div>
+    </div>
+        <div class="gallery">
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-1.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-2.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-3.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-4.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-5.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-6.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-7.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-8.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-9.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-10.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-11.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+            <figure class="gallery-item">
+                <img src="content/img/gallery/gallery-12.jpg" alt="photo of beautifully arranged food" class="gallery-img">
+            </figure>
+        </div>
+    </section>
    
 </main>  
 
