--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </h2>
         </div>
         <div class="container grid grid--2-cols">
-            <div class="pricing-plan">
+            <div class="pricing-plan pricing-plan-starter">
                 <header class="plan-header">
                 <p class="plan-name">Starter</p>
                 <p class="plan-price"><span>$</span>399</p>
@@ -267,15 +267,16 @@
             </header>
                 <ul class="list">
                     <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>1 meal per day</span></li>
-                    <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order times are between 11am and 9pm</span></li>
+                    <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Order between 11am and 9pm</span></li>
                     <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Delivery is free</span></li>
+                    <li class="list-item"><ion-icon name="close-outline" class="list-icon" ></ion-icon><span></span></li>
                 </ul>
                 <div class="plan-sign-up">
                 <a href="#" class="btn margin-right-small btn--full">Start eating well</a>
             </div>
             </div>
 
-            <div class="pricing-plan">
+            <div class="pricing-plan pricing-plan-complete">
                 <header class="plan-header">
                 <p class="plan-name">Complete</p>
                 <p class="plan-price"><span>$</span>649</p>
@@ -288,6 +289,35 @@
                     <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Get access to latest recipes</span></li>
                 </ul>
                 <div class="plan-sign-up"><a href="#" class="btn margin-right-small btn--full">Start eating well</a></div>
+            </div>
+        </div>
+        <div class="pricing-detail">
+            <p class="plan-detail">Prices include all applicable taxes. You can cancel at any time. Both plans include the following:</p>
+        </div>
+        <div class="container grid grid--4-cols">
+            <div class="pricing-feature">
+                <ion-icon  class="feature-icon"
+                name="infinite-outline"></ion-icon>
+                <p class="feature-title">Never cook again!</p>
+                <p class="feature-text">Our subscriptions cover 365 days per year, even including major holidays.</p>
+            </div>
+            <div class="pricing-feature">
+                <ion-icon  class="feature-icon"
+                name="nutrition-outline"></ion-icon>
+                <p class="feature-title">Local and organic</p>
+                <p class="feature-text">Our cooks only use local, fresh, and organic products to prepare your meals.</p>
+            </div>
+            <div class="pricing-feature">
+                <ion-icon  class="feature-icon"
+                name="leaf-outline"></ion-icon>
+                <p class="feature-title">No waste</p>
+                <p class="feature-text">All our partners only use reusable containers to package all your meals.</p>
+            </div>
+            <div class="pricing-feature">
+                <ion-icon  class="feature-icon"
+                name="pause-outline"></ion-icon>
+                <p class="feature-title">Pause anytime</p>
+                <p class="feature-text">Going on vacation? Just pause your subscription, and we refund unused days.</p>
             </div>
         </div>
     </section>
