--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@
                 <p class="cta-text">
                     Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
                 </p>
-                <form action="#">
+                <form 
+               class="cta-form" action="#">
                 <div>
                     <label for="name">Full Name</label>
                     <input type="text" class="name" id="name" placeholder="John Mao" required>
@@ -351,7 +352,7 @@
                     </select>
                 </div>
 
-                <button class="btn" >Sign up now</button>
+                <button class="btn btn--form" >Sign up now</button>
                 </form>
             </div>
             
