--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 
 <body>
     <header class="header">
-        <img src="content/img/omnifood-logo.png" alt="omnifood-logo" class="logo">
+        <a href="#" class="">
+            <img src="content/img/omnifood-logo.png" alt="omnifood-logo" class="logo">
+            </a>
         <nav class="main--nav">
             <ul class="main--nav--list">
-                <li><a class="main--nav--link" href="#">Section 1</a></li>
-                <li><a class="main--nav--link" href="#">Section 2</a></li>
-                <li><a class="main--nav--link" href="#">Section 3</a></li>
-                <li><a class="main--nav--link" href="#">Section 4</a></li>
-                <li><a class="main--nav--link nav-cta" href="#">Section 5</a></li>
+                <li><a class="main--nav--link" href="#how-it-works">How it works</a></li>
+                <li><a class="main--nav--link" href="#meals">Meals</a></li>
+                <li><a class="main--nav--link" href="#Testimonials">Testimonials</a></li>
+                <li><a class="main--nav--link" href="#Pricing">Pricing</a></li>
+                <li><a class="main--nav--link nav-cta" href="#">Try for free</a></li>
             </ul>
         </nav>
     </header>
@@ -69,7 +71,7 @@
             <img src="content/img/logos/usa-today.png" alt="usa-today logo">
         </div>
     </section>
-    <section class="section--how">
+    <section class="section--how" id="how-it-works">
         <div class="container">
             <span class="subheading">How it works</span>
             <h2 class="heading--secondary">
@@ -113,7 +115,7 @@
         </div>
     </section>
 
-    <section class="section--meals">
+    <section class="section--meals" id="meals">
         <div class="container text-center">
             <span class="subheading">Meals</span>
             <h2 class="heading--secondary">
@@ -179,7 +181,7 @@
         </div>
     </section>
 
-    <section class="section--testmonial">
+    <section class="section--testmonial" id="Testimonials">
         <div class="testmonial-left">
         <span class="subheading">testimonials</span>
         <h2 class="heading--secondary">
@@ -251,7 +253,7 @@
         </div>
     </section>
    
-    <section class="section--pricing">
+    <section class="section--pricing" id="Pricing">
         <div class="container">
             <span class="subheading">Pricing</span>
             <h2 class="heading--secondary">
@@ -362,6 +364,61 @@
         </div>
     </section>
 </main>  
+
+<footer class="footer">
+<div class="container grid grid-footer">
+    <div class="logo-col">
+        <a href="#" class="footer-logo">
+            <img src="content/img/omnifood-logo.png" alt="omnifood-logo" class="logo">
+        </a>
+        <ul class="social">
+            <li><a href="#" class="footer-link"><ion-icon name="logo-instagram"></ion-icon></a></li>
+            <li><a href="#" class="footer-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
+            <li><a href="#" class="footer-link"><ion-icon name="logo-twitter"></ion-icon></a></li>
+        </ul>
+        <p class="copyright">
+            Coopyright &copy; 2027 by Omnifood, Inc. All rights reserved.
+        </p>
+    </div>
+    <div class="address-col">
+        <p class="footer-heading">Contact us</p>
+        <address class="contacts">
+            <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p>
+                <a class="footer-link" href="tel:415-201-6370">415-201-6370</a>
+                <br />
+                <a class="footer-link" href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+            </p>
+        </address>
+    </div>
+    <nav class="nav-col">
+        <p class="footer-heading">Account</p>
+        <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#">iOS app</a></li>
+            <li><a class="footer-link" href="#">Android app</a></li>
+        </ul>
+    </nav>
+    <nav class="nav-col">
+        <p class="footer-heading">Company</p>
+        <ul class="footer-nav">
+            <li><a class="footer-link" href="#">About Omnifood</a></li>
+            <li><a class="footer-link" href="#">For Business</a></li>
+            <li><a class="footer-link" href="#">Cooking partners</a></li>
+            <li><a class="footer-link" href="#">Careers</a></li>
+        </ul>
+    </nav>
+    <nav class="nav-col">
+        <p class="footer-heading">Resources</p>
+        <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Recipe directory</a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
+        </ul>
+    </nav>
+</div>
+</footer>
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
