--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Omnifood is a 365-days-per-year food subscription that will make you eat healthy again. Tailored to your personal tastes and nutritional needs. ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- add fevicon for different devices -->
+    <link rel="icon" href="content/img/favicon.png">
+    <link rel="apple-touch-icon" href="content/img/apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="queries.css">
-    <title>Omnifood</title>
+    <title>Omnifood &mdash; never cook again!</title>
 </head>
 
-<body>
-    <header class="header">
+<body >
+    <header class="header ">
         <a href="#" class="">
             <img src="content/img/omnifood-logo.png" alt="omnifood-logo" class="logo">
             </a>
@@ -24,7 +29,7 @@
                 <li><a class="main--nav--link" href="#meals">Meals</a></li>
                 <li><a class="main--nav--link" href="#Testimonials">Testimonials</a></li>
                 <li><a class="main--nav--link" href="#Pricing">Pricing</a></li>
-                <li><a class="main--nav--link nav-cta" href="#">Try for free</a></li>
+                <li><a class="main--nav--link nav-cta" href="#cta">Try for free</a></li>
             </ul>
         </nav>
 
@@ -42,8 +47,8 @@
             <p class="hero-description">
                 The smart 365-days-per-year food subscription that will make you eat healthy again. Tailored to your personal tastes and nutritional needs. 
             </p>
-            <a href="#" class="btn margin-right-small btn--full">Start eating well</a>
-            <a href="#" class="btn btn--outline">Learn more &darr;</a>
+            <a href="#cta" class="btn margin-right-small btn--full">Start eating well</a>
+            <a href="#how-it-works" class="btn btn--outline">Learn more &darr;</a>
             <div class="delivered-meals">
                 <div class="delivered-imgs">
                     <img src="content/img/customers/customer-1.jpg" alt="Customer photo">
@@ -59,9 +64,16 @@
             </div>
         </div>
         <div class="hero-img-box">
-            <img src="content/img/hero.png" class="hero-img"
-        alt="A woman enjoying food, meals in container, food bowls on a table">
-        </div>
+            <picture>
+                <source srcset="content/img/hero.webp" type="image/webp" />
+                <source srcset="content/img/hero-min.png" type="image/png" />
+  
+                <img
+                  src="content/img/hero-min.png"
+                  class="hero-img"
+                  alt="Woman enjoying food, meals in storage container, and food bowls on a table"
+                />
+              </picture>
         </div>
     </section>
 
@@ -330,7 +342,7 @@
         </div>
     </section>
 
-    <section class="section-cta">
+    <section class="section-cta" id="cta">
         <div class="container">
             <div class="cta">
             <div class="cta-text-box">
@@ -339,18 +351,18 @@
                     Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
                 </p>
                 <form 
-               class="cta-form" action="#">
+               class="cta-form" name="sign-up" netlify>
                 <div>
                     <label for="name">Full Name</label>
-                    <input type="text" class="name" id="name" placeholder="John Mao" required>
+                    <input name="fullname" type="text" class="name" id="name" placeholder="John Mao" required>
                 </div>
                 <div>
                     <label for="email">Email address</label>
-                    <input type="email" class="email" id="email" placeholder="mao@email.com" required>
+                    <input name="email" type="email" class="email" id="email" placeholder="mao@email.com" required>
                 </div>
                 <div>
                     <label for="select-where">Where did you hear about us?</label>
-                    <select id="select-where">
+                    <select name="select-where" id="select-where">
                         <option value="">Please choose one option:</option>
                         <option value="friends">Friends and family</option>
                         <option value="youtube">Youtube video</option>
@@ -383,7 +395,7 @@
             <li><a href="#" class="footer-link"><ion-icon name="logo-twitter"></ion-icon></a></li>
         </ul>
         <p class="copyright">
-            Coopyright &copy; 2027 by Omnifood, Inc. All rights reserved.
+            Coopyright &copy; <span class="year">3000</span> by Omnifood, Inc. All rights reserved.
         </p>
     </div>
     <div class="address-col">
@@ -426,6 +438,7 @@
 </div>
 </footer>
 
+<script src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <script src="app.js"></script>
